Actions
Bug #12569
closedics951601: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
../../sun4u/io/i2c/clients/ics951601.c: In function 'ics951601_attach': ../../sun4u/io/i2c/clients/ics951601.c:273: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *'
Testing done: build/install/boot
Related issues
Updated by Toomas Soome almost 2 years ago
- Related to Bug #12814: CCVERBOSE flag in CFLAGS is redundant and not needed added
Updated by Electric Monk almost 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 5be38ebbbdbfff51cf09152ef2c304a0b4d68c0f
commit 5be38ebbbdbfff51cf09152ef2c304a0b4d68c0f Author: Toomas Soome <tsoome@me.com> Date: 2020-06-05T06:08:34.000Z 12569 ics951601: NULL pointer errors Reviewed by: Yuri Pankov <ypankov@tintri.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions